--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 10000",
+    "test": "NODE_ENV=testing mocha --recursive --exit --timeout 10000",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mocha": "^10.0.0",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "supertest": "^6.2.3"
   }
 }
