--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=testing mocha --recursive --exit --timeout 10000",
+    "seed": "node src/db/seedDB.js",
+    "test": "NODE_ENV=testing mocha --recursive --exit --timeout 30000",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
