--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mocha": "^10.0.0",
     "mongoose": "^6.3.3",
