--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "axios": "^0.27.2",
     "browserify": "^17.0.0",
     "chai": "^4.3.6",
